fixed end date input to display selected date on calendar selection, fixed graph spacing

--- a/src/components/SpendingForm.css
+++ b/src/components/SpendingForm.css
@@ -50,7 +50,7 @@
     justify-content: space-evenly;
 
     width: 100%;
-    padding: 1rem 2.2rem;
+    padding: 0 2.2rem 2rem 2.2rem;
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
 
@@ -93,7 +93,7 @@
     padding: 1rem;
     border-radius: 1rem;
     border: none;
-    margin-top: 1rem;
+    margin-top: 2rem;
     font-size: 1.8rem;
     font-family: 'DM-SansBold';
     color: var(--dark-brown);
