--- a/src/components/SpendingGraph.css
+++ b/src/components/SpendingGraph.css
@@ -13,11 +13,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    /* padding-top: 4rem; */
+
     padding: 4rem 1rem 0 1rem;
     margin: 0 1rem;
     min-height: 20rem;
-    /* width: 100%; */
+
     overflow-x: scroll;
 }
 
@@ -27,7 +27,6 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    /* width: 1rem; */
     justify-content: flex-end;
 
     margin: .5rem;
@@ -43,7 +42,7 @@
     position: relative;
     align-self: center;
 
-    min-width: 3.5rem;
+    min-width: 2rem;
     width: 100%;
 
     background-color: var(--soft-red);
@@ -107,7 +106,7 @@
 
 @media only screen and (min-width: 26.5rem) {
     .graph-bar--item {
-        max-width: 6rem;
+        min-width: 5rem;
     }
 
     .graph__header {
